[workspace]

members = [
    "asn1-per",
    "amf-sim",
    "common",
    "sctp",
    "net",
    "mocks",
    "ngap",
    "f1ap",
    "e1ap",
    "rrc",
    "pdcp",
    "gnb-cu-cp",
    "gnb-cu-up",
    "connection-api",
    "coordination-api",
    "gnb-cu-cp-coordinator",
    "gnb-du-sim",
    "integration-tests"
]