[workspace]

members = [
    "asn1-per",
    "mock-5gc",
    "common",
    "sctp",
    "net",
    "mocks",
    "ngap",
    "f1ap",
    "e1ap",
    "xxap",
    "rrc",
    "pdcp",
    "gnb-cu-cp",
    "gnb-cu-up",
    "connection-api",
    "coordination-api",
    "gnb-cu-cp-coordinator",
    "mock-du",
    "integration-tests"
]