[workspace]
resolver = "1"
members = [
    "mock-5gc",
    "common",
    "5g-asn1-protos/sctp",
    "mocks",
    "5g-asn1-protos/ngap",
    "5g-asn1-protos/f1ap",
    "5g-asn1-protos/e1ap",
    "5g-asn1-protos/xxap",
    "5g-asn1-protos/rrc",
    "pdcp",
    "gnb-cu",
    "gnb-cu-cp",
    "gnb-cu-up",
    "connection-api",
    "coordination-api",
    "gnb-cu-cp-coordinator",
    "mock-du",
    "integration-tests",
]
