[package]
name = "amf-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mocks = { path = "../mocks" }
slog = "2.7.0"
anyhow = "1.0.52"
async-std = { version = "1.10.0", features = ["attributes"] }
common = { path = "../common" }
hex = "0.4.3"