[package]
name = "asn1-per"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
slog = "2.7.0"
anyhow = "1.0.52"
async-channel = "1.6.1"
asn1-codecs = { git = "https://github.com/nplrkn/hampi" }
thiserror = "1.0.36"
num_enum = "0.5.11"
bitvec = "1.0.1"
nonempty = "0.8.1"