[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
slog = "2.7.0"
sloggers = "2.1.1"
slog-term = "2.8.0"
slog-async = "2.7.0"
signal-hook = "0.3.10"
signal-hook-async-std = "0.2.1"
anyhow = "1.0.51"
async-channel = "1.6.1"
