[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sctp = { package = "also-sctp", path = "../also-sctp" }
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.51"
slog = "2.7.0"
sloggers = "2.1.1"
slog-term = "2.8.0"
slog-async = "2.7.0"
signal-hook = "0.3.13"
signal-hook-async-std = "0.2.1"
anyhow = "1.0.52"
async-channel = "1.6.1"
os_socketaddr = "0.2.0"
libc = "^0.2"
async-io = "1.6.0"
async-net = "1.6.1"
hex = "0.4.3"
futures = "0.3.19"
futures-lite = "1.12.0"
bitvec = {version = "0.22", features = ["serde"] }
asn1-codecs = "0.1.2"
asn1_codecs_derive = "0.1.2"
log = "0.4.3"
errno = "0.2.8"
stop-token = "0.6.1"
async-stream = "0.3.2"
futures-core = "0.3.19"
serde = "1.0.133"
serde_json = "1.0.74"
