[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
slog = "2.7.0"
sloggers = "2.1.1"
slog-term = "2.8.0"
slog-async = "2.7.0"
signal-hook = "0.3.13"
signal-hook-async-std = "0.2.1"
anyhow = "1.0.52"
async-channel = "1.6.1"
libc = "^0.2"
async-io = "1.9.0"
futures-lite = "1.12.0"
log = "0.4.3"
futures-core = "0.3.19"
slog-envlogger = "2.2.0"
stop-token = "0.6.1"

