[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
node-control-api = { path = "../node-control-api", features = ["server"] }
hyper = "0.13"
serde_ignored = "0.1.1"
url = "2.1"
tokio-openssl = "0.4"
openssl = "0.10"
uuid = {version = "0.8", features = ["serde", "v4"]}
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = "6.1.0"
log = "0.4.0"
mime = "0.3"
async-std = { version = "1.10.0", features = ["attributes","tokio02"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "stream"] }
slog = "2.7.0"
stop-token = "0.6.1"
