[package]
name = "f1ap"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
#asn1-codecs = { path = "../../hampi/codecs" }
asn1-codecs = { git = "https://github.com/nplrkn/hampi", branch="all-fixes" }
hex = "0.4.3"
num_enum = "0.5.7"
bitvec = { version = "0.22" }
net = { path = "../net" }
async-trait = "0.1.51"
anyhow = "1.0.52"
slog = "2.7.0"

