[package]
name = "gnb-cu-cp-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
coordination-api = { path = "../coordination-api", features = ["server"] }
connection-api = { path = "../connection-api", features = ["client"] }
serde_ignored = "0.1.1"
anyhow = "1.0.52"
url = "2.1"
tokio-openssl = "0.4"
openssl = "0.10"
uuid = {version = "0.8", features = ["serde", "v4"]}
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server"] }
hyper = {version = "0.14", features = ["full"]}
log = "0.4.0"
mime = "0.3"
async-std = { version = "1.10.0", features = ["attributes","tokio1"] }
slog = "2.7.0"
stop-token = "0.6.1"
async-channel = "1.6.1"
