[package]
name = "gnb-cu-up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
anyhow = "1.0.52"
common = { path = "../common" }
async-std = { version = "1.10.0", features = ["attributes","tokio1"] }
async-trait = "0.1.24"
stop-token = "0.7.0"
e1ap = {path = "../e1ap" }
net = { path = "../net" }
