[package]
name = "gnb-cu-up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
anyhow = "1.0.52"
common = { path = "../common" }
async-std = { version = "1.10.0", features = ["attributes","tokio1"] }
async-trait = "0.1.68"
stop-token = "0.7.0"
xxap = {path = "../xxap" }
e1ap = {path = "../e1ap" }
net = { path = "../net" }
futures = "0.3"
bitvec = "1.0.1"
asn1-per = { path = "../asn1-per" }
async-net = "1.6.1"
dashmap = "5.4.0"
rand = "0.8.5"
socket2 = { version = "0.5.3", features = ["all"] }
