[package]
name = "gnb-cu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stop-token = "0.7.0"
async-std = { version = "1.10.0", features = ["attributes","tokio1"] }
slog = "2.7.0"
anyhow = "1.0.52"
common = { path = "../common" }
gnb-cu-cp = {path = "../gnb-cu-cp" }
gnb-cu-up = {path = "../gnb-cu-up" }
uuid = {version = "1.3", features = ["serde", "v4"]}
clap = { version = "4.1.6", features = ["derive"] }
