[package]
name = "gnbcu"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
net = { path = "../net" }
stop-token = "0.6.1"
async-std = { version = "1.10.0", features = ["attributes"] }
slog = "2.7.0"
anyhow = "1.0.52"
f1ap = {path = "../f1ap" }
ngap = {path = "../ngap" }
rrc = {path = "../rrc" }
pdcp = {path = "../pdcp" }
async-trait = "0.1.51"
bitvec = {version = "0.22" }
common = { path = "../common" }
async-channel = "1.6.1"
