[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
common = { path = "../common" }
mocks = { path = "../mocks" }
gnbcu = { path = "../gnbcu" }
#coordinator = { path = "../coordinator"}
slog = "2.7.0"
anyhow = "1.0.52"
stop-token = "0.6.1"
rand = "0.8.5"
