[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.10.0", features = ["attributes","tokio1"] }
async-trait = "0.1.68"
common = { path = "../common" }
mocks = { path = "../mocks" }
gnb-cu-cp = { path = "../gnb-cu-cp" }
gnb-cu-up = { path = "../gnb-cu-up" }
coordinator = { path = "../gnb-cu-cp-coordinator", package = "gnb-cu-cp-coordinator" }
slog = "2.7.0"
anyhow = "1.0.52"
stop-token = "0.7.0"
rand = "0.8.5"
uuid = {version = "1.3", features = ["v4"]}
async-net = "1.6.1"
