[package]
name = "mocks"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
net = { path = "../net" }
f1ap = {path = "../f1ap" }
ngap = {path = "../ngap" }
rrc = {path = "../rrc" }
pdcp = {path = "../pdcp" }
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.51"
slog = "2.7.0"
stop-token = "0.6.1"
async-channel = "1.6.1"
bitvec = "0.22"
anyhow = "1.0.52"
