[package]
name = "mocks"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
net = { path = "../net" }
#asn1-per = { path = "../asn1-per" }
f1ap = {path = "../f1ap" }
e1ap = {path = "../e1ap" }
ngap = {path = "../ngap" }
rrc = {path = "../rrc" }
pdcp = {path = "../pdcp" }
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.68"
slog = "2.7.0"
stop-token = "0.7.0"
async-channel = "1.6.1"
bitvec = "1.0.1"
anyhow = "1.0.52"
