[package]
name = "mocks"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
net = { path = "../5g-asn1-protos/net" }
#asn1-per = { path = "../asn1-per" }
f1ap = { path = "../5g-asn1-protos/f1ap" }
e1ap = { path = "../5g-asn1-protos/e1ap" }
ngap = { path = "../5g-asn1-protos/ngap" }
xxap = { path = "../5g-asn1-protos/xxap" }
rrc = { path = "../5g-asn1-protos/rrc" }
asn1-per = { path = "../5g-asn1-protos/asn1-per" }
pdcp = { path = "../pdcp" }
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.68"
slog = "2.7.0"
stop-token = "0.7.0"
async-channel = "1.6.1"
anyhow = "1.0.52"
rand = "0.8.5"
async-net = "1.6.1"
