[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sctp = { path = "../sctp" }
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.51"
slog = "2.7.0"
sloggers = "2.1.1"
anyhow = "1.0.52"
async-channel = "1.6.1"
async-io = "1.6.0"
async-net = "1.6.1"
hex = "0.4.3"
futures = "0.3.19"
futures-lite = "1.12.0"
log = "0.4.3"
errno = "0.2.8"
stop-token = "0.6.1"
async-stream = "0.3.2"
futures-core = "0.3.19"
asn1-codecs = { path = "../../hampi/codecs" }
#asn1-codecs = { git = "https://github.com/nplrkn/hampi/", branch = "fix-range-256-int"  }
#asn1-codecs = { git = "https://github.com/nplrkn/hampi", branch = "all-fixes" }
xxap-transaction = { path = "../xxap-transaction" }
