[package]
name = "net"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
sctp = { path = "../sctp" }
common = { path = "../common"}
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.51"
slog = "2.7.0"
anyhow = "1.0.52"
async-channel = "1.6.1"
async-io = "1.7.0"
async-net = "1.6.1"
futures = "0.3.19"
futures-lite = "1.12.0"
log = "0.4.3"
errno = "0.2.8"
stop-token = "0.6.1"
async-stream = "0.3.2"
futures-core = "0.3.25"
asn1-codecs = { git = "https://github.com/nplrkn/hampi", branch="fix-constrained-u32-encode" }
thiserror = "1.0.36"
bitvec = "1.0.1"
