[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
also-net = { path = "../also-net" }
async-std = { version = "1.10.0", features = ["attributes"] }
node-control-api = { path = "../node-control-api", features = ["client"] }
async-trait = "0.1.51"
async-channel = "1.6.1"
slog = "2.7.0"
sloggers = "2.1.1"
slog-term = "2.8.0"
slog-async = "2.7.0"
os_socketaddr = "0.2.0"
hex = "0.4.3"
byteorder = "1.4.3"
anyhow = "1.0.52"
swagger = "5.0.2"
uuid = {version = "0.8", features = ["serde", "v4"]}
stop-token = "0.6.1"
asn1-codecs = "0.1.2"
asn1_codecs_derive = "0.1.2"
bitvec = {version = "0.22", features = ["serde"] }
