[package]
name = "xxap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
hex = "0.4.3"
anyhow = "1.0.52"
slog = "2.7.0"
asn1-per = { path = "../asn1-per"}
num_enum = "0.5.11"
net = { path = "../net" }
async-net = "1.6.1"
bitvec = "1.0.1"

[lib]
doctest = false

