[package]
name = "f1ap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1 = { git = "https://github.com/nplrkn/asn1-per-tinker/", branch = "constraint-public-fields" }
num-traits = "0.2.14"
num-derive = "0.3.3"


