[package]
name = "ngap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#asn1-codecs = "0.1.3"
#asn1-codecs = { git = "https://github.com/nplrkn/hampi/" }
asn1-codecs = { path = "../../../../hampi/codecs" }
hex = "0.4.3"
num_enum = "0.5.7"
bitvec = { version = "0.22" }